fix frontend text style on dark mode

--- a/packages/dp-editorjs/editorComponents/VariableOptions/index.scss
+++ b/packages/dp-editorjs/editorComponents/VariableOptions/index.scss
@@ -4,6 +4,10 @@ $color-bg-gray: rgba(232, 232, 235, 0.49);
 
 $loader-color: rgba(29, 32, 43, 0.3);
 
+#emailContent{
+    color: #000;
+}
+
 .codex-editor__redactor{
     padding-bottom: 50px !important;
 }
